# chat-revive-bot

./: .gitignore  evaluate.py  funfacts.txt  google_search.py  is_safe_code.py  main.py  newstickers.txt  pyproject.toml  questions.txt  randomfen.py  readme.md  requirements.txt  sandbox.py  trustedmembers.txt  youcanonlyusethisonceinyourlife.py
cogs/: chessengine.py  execute.py  help.py  kekwlb.py  pingeveryone.py  pythonwiki.py  random.py  reviv.py  revive.py  skulllb.py  suggest.py
other_cmd/: ask.py  colonthree.py  coolify.py  echo.py  exec.py  execute.py  experiment.py  help.py  info.py  kekwlb.py  pi.py  pi_position.json  pingeveryone.py  pychess.py  rockyou.py  roll.py  sha256.py  test.py  youcanonlyusethisonceinyourlife.py
questions/: emily-o3.txt  jsaidoru.txt
