[project]
name = "chat-revive-bot"
version = "0.1.0"
description = "A chatbot revival tool"
requires-python = ">=3.13.2"
dependencies = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.12.13",
  "aiosignal==1.3.2",
  "alt-profanity-check>=1.7.0",
  "attrs==25.3.0",
  "audioop-lts==0.2.1",
  "beautifulsoup4==4.13.4",
  "certifi==2025.6.15",
  "charset-normalizer==3.4.2",
  "chess==1.11.2",
  "discord.py==2.5.2",
  "frozenlist==1.7.0",
  "googlesearch-python==1.3.0",
  "idna==3.10",
  "joblib==1.5.1",
  "multidict==6.6.2",
  "numpy==2.3.1",
  "pistonapi>=1.0.1",
  "propcache==0.3.2",
  "python-chess==1.999",
  "python-dotenv==1.1.1",
  "requests==2.32.4",
  "scikit-learn==1.7.0",
  "scipy==1.16.0",
  "setuptools==80.9.0",
  "soupsieve==2.7",
  "threadpoolctl==3.6.0",
  "tinydb>=4.8.2",
  "typing_extensions==4.14.0",
  "urllib3==2.5.0",
  "wikipedia>=1.4.0",
  "wolframalpha>=5.1.3",
  "yarl==1.20.1",
]
[tool.ruff]
ignore = ["E701", "E702"]